# dfm-sdg

./: .gitignore  README.md  eurlex.md  high_quality_ids_capped.tsv  high_quality_subsets.txt  pyproject.toml
scripts/: run_instruction_following_10k.py
sdg/commons/: concurrency.py  diversity.py  model.py  progress.py  prompt_surface.py  run.py  run_log.py  sources.py  viewer.py  work_queue.py  z3_solver.py
sdg/packs/backtranslation/: README.md  build.py
sdg/packs/backtranslation_passages/: build.py  pack.yaml
sdg/packs/backtranslation_passages_dsk/: README.md  build.py  pack.yaml
sdg/packs/backtranslation_passages_dynaword/: build.py  dataset_card.md  pack.yaml  source_contexts.json
sdg/packs/backtranslation_passages_eurlex/: README.md  build.py  pack.yaml
sdg/packs/danmarks_statistik/: build.py  pack.yaml
sdg/packs/dst_statbank/: build.py  pack.yaml
sdg/packs/dst_tables/: build.py  pack.yaml
sdg/packs/eur_lex_sum/: README.md  build.py  pack.yaml
sdg/packs/instruction_following/: README.md  __init__.py  build.py  constraints.py  generator.py  pack.yaml  prompt_sources.py
sdg/packs/pleias_synth/: build.py  gen_memorization.py  llm_json.py
tests/: test_backtranslation_passages_dynaword_pack.py  test_commons_helpers.py  test_dst_tables_pack.py  test_eur_lex_sum_pack.py  test_instruction_following_pack.py  test_llm_json.py  test_model_endpoints.py  test_pleias_memory_core.py  test_synth_languages.py  test_synth_memory_core.py  test_synth_sources.py  test_tidsskrift_filters.py  test_verifiable_reasoning_pack.py  test_viewer.py  test_work_queue.py
(+170 files in other folders)
